# routes/api.php
@@ -90,6 +90,7 @@ Route::middleware(['auth:sanctum', 'user'])->group(function() {
 
     Route::get('/checkout', [HomeController::class, 'checkout']);
     Route::post('/order', [HomeController::class, 'order']);
-});    
+    Route::get('/order-history', [HomeController::class, 'orderHistory']);
+});
 
 
